sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:6: error: not found: value v
    while(getCouleur(k)>v && k>0){
                        ^