sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
	var k:Int = 0
  for(i <- 1 to getTaille()-1){
    k=i;
    while(getCouleur(k)>v && k>0){
      k = k-1;
    }
    echange(i,k)   
  }
}